{
    "name": "InputActions",
    "maps": [
        {
            "name": "ActionMap",
            "id": "4a1f1c78-72e7-4cf6-bcd6-28a5ab7294a2",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c2898c57-8c90-4e87-b2e8-c8f54dd65756",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseClick",
                    "type": "PassThrough",
                    "id": "64866ea7-a16a-4b91-9b70-5f74fe8fb982",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83bb7bff-1835-4425-91ca-23cb5f1bedb5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55ee1a76-a127-4179-b9d5-f07ca9c7eafa",
                    "path": "<Mouse>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}